name:                rhpwk
version:             0.1.0.0
synopsis:            OpenBSD haskell port manager
license:             BSD2
license-file:        LICENSE
author:              Matthias Kilian
maintainer:          kili@outback.escape.de
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable rhpwk
  main-is:       RHPWK.hs
  ghc-options:   -Wno-tabs -main-is RHPWK -Wunused-imports
  other-modules: Cabal.Cabal, Database.GhcPkg, Database.Sqlports
  build-depends: base >=4.12 && <4.13, containers >=0.6 && <0.7, Cabal >=2.4 && <2.5, filepath >=1.4 && <1.5, directory >=1.3 && <1.4, HDBC >=2.4 && <2.5, HDBC-sqlite3 >=2.3 && <2.4, hackage-db, regex-compat, process >= 1.6.5
  default-language:    Haskell2010
