cabal-version:       2.2
name:                rhpwk
version:             0.1.0.0
synopsis:            OpenBSD haskell port manager
license:             BSD-2-Clause
license-file:        LICENSE
author:              Matthias Kilian
maintainer:          kili@outback.escape.de
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable rhpwk
  main-is:       RHPWK.hs
  ghc-options:   -Wno-tabs -main-is RHPWK -Wunused-imports
  other-modules: Cabal.Cabal, Database.GhcPkg, Database.Sqlports
  build-depends: Cabal >=2.4 && <2.5,
                 GenericPretty>=1.2.3,
                 HDBC >=2.4 && <2.5,
                 HDBC-sqlite3 >=2.3 && <2.4,
                 base >=4.12 && <4.13,
                 containers >=0.6 && <0.7,
                 data-fix == 0.2.0,
                 directory >=1.3 && <1.4,
                 filepath >=1.4 && <1.5,
                 hackage-db,
                 pretty,
                 process >= 1.6.5,
                 text
  default-language:    Haskell2010
